--- a/render.yaml
+++ b/render.yaml
@@ -1,30 +1,37 @@
+services:
+  - type: web
+    name: svensktravsportscraper
+    env: docker
+    plan: standard
+    # optional: buildCommand: ...
+    # optional: startCommand: ...
+    # (eller låt Dockerfile styra allt som nu)
+
 jobs:
-# ── STARTLISTA ──────────────────────────────────────────────────────
-# summer: Mar-Oct  (UTC+2 ⇒ 22:00 SE  = 20:00 UTC)
-- type: cron
-  name: scrape-startlist-summer
-  env: docker
-  schedule: "0 20 * 3-10 *"              # minute hour day month dow
-  command: python manage.py scrape_startlist
+  # Startlista-scraping, sommar
+  - type: cron
+    name: scrape-startlist-summer
+    env: docker
+    schedule: "0 20 * 3-10 *"
+    command: python manage.py scrape_startlist
 
-# winter: Nov-Feb (UTC+1 ⇒ 22:00 SE = 21:00 UTC)
-- type: cron
-  name: scrape-startlist-winter
-  env: docker
-  schedule: "0 21 * 11,12,1,2 *"
-  command: python manage.py scrape_startlist
+  # Startlista-scraping, vinter
+  - type: cron
+    name: scrape-startlist-winter
+    env: docker
+    schedule: "0 21 * 11,12,1,2 *"
+    command: python manage.py scrape_startlist
 
-# ── RESULTAT (every 30 min) ─────────────────────────────────────────
-# summer: 
-- type: cron
-  name: scrape-results-summer
-  env: docker
-  schedule: "0,15 10-20 * 3-10 *" 
-  command: python manage.py scrape_results
+  # Resultat-scraping, sommar
+  - type: cron
+    name: scrape-results-summer
+    env: docker
+    schedule: "0,15 10-20 * 3-10 *"
+    command: python manage.py scrape_results
 
-# winter:
-- type: cron
-  name: scrape-results-winter
-  env: docker
-  schedule: "0,15 11-21 * 11,12,1,2 *"
-  command: python manage.py scrape_results
+  # Resultat-scraping, vinter
+  - type: cron
+    name: scrape-results-winter
+    env: docker
+    schedule: "0,15 11-21 * 11,12,1,2 *"
+    command: python manage.py scrape_results
